--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,12 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.xerial:sqlite-jdbc:3.41.2.1'
+	implementation 'org.hibernate:hibernate-community-dialects:6.2.5.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
